tests/typing/bad/testfile-call-2.c
#include <stdbool.h>
#include <stdlib.h>
#include <stdio.h>

void f() {}
int main() { f(1); }

